# gr-doa

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  MANIFEST.md  MANIFEST.yml  README.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt  README.md  X440_indiv_channel_test.grc  calculate_X310_TwinRX_phase_sync_accuracy.grc  calculate_phase_sync_accuracy.grc  calculate_phase_sync_accuracy.py  calibrate_lin_array.grc  calibrate_lin_array.py  calibrate_lin_array_X310_TwinRX.grc  estimate_X310_TwinRX_constant_phase_offsets_and_save.grc  estimate_constant_phase_offsets_and_save.grc  estimate_constant_phase_offsets_and_save.py  run_DoA_transmitter.grc  run_DoA_transmitter.py  run_MUSIC_RootMUSIC_comparison.grc  run_MUSIC_RootMUSIC_filesave.grc  run_MUSIC_calib_lin_array.grc  run_MUSIC_calib_lin_array.py  run_MUSIC_calib_lin_array_X310_TwinRX.grc  run_MUSIC_calib_lin_array_simulation.grc  run_MUSIC_lin_array.grc  run_MUSIC_lin_array.py  run_MUSIC_lin_array_X310_TwinRX.grc  run_MUSIC_lin_array_simulation.grc  run_MUSIC_lin_array_simulation.py  run_RootMUSIC_calib_lin_array.grc  run_RootMUSIC_calib_lin_array_X310_TwinRX.grc  run_RootMUSIC_calib_lin_array_simulation.grc  run_RootMUSIC_lin_array.grc  run_RootMUSIC_lin_array.py  run_RootMUSIC_lin_array_X310_TwinRX.grc  run_RootMUSIC_lin_array_simulation.grc  run_calib_lin_array_simulation.grc  rx_general_test.grc  view_X310_TwinRX_op_with_corrected_phase_offsets.grc  view_op_with_corrected_phase_offsets.grc  view_op_with_corrected_phase_offsets.py
apps/Narrowband-Flowgraphs/: calibrate_lin_array.grc  run_MUSIC_RootMUSIC_filesave.grc  run_MUSIC_calib_lin_array.grc  run_MUSIC_lin_array.grc  run_RootMUSIC_calib_lin_array.grc
apps/WiFi-Flowgraphs/: calibrate_lin_array_WiFi.grc  run_DoA_receiver_WIFI.grc  run_DoA_transmitter_WIFI.grc  run_MUSIC_calib_lin_array_WiFi.grc  run_MUSIC_lin_array_WiFi.grc  run_MUSIC_lin_array_simulation_WiFi.grc  run_RootMUSIC_calib_lin_array_WiFi.grc  run_RootMUSIC_lin_array_WiFi.grc  test_detection.grc  test_detection_WiFi.grc
apps/debugging/: X440_indiv_channel_test.grc
docs/: CMakeLists.txt  README.doa
examples/: CMakeLists.txt  estimate_doa_MUSIC_linear_array.m  estimate_doa_RootMUSIC_linear_array.m
grc/: CMakeLists.txt  README.md  doa_MUSIC_lin_array.block.yml  doa_MUSIC_lin_array.xml  doa_antenna_correction.block.yml  doa_antenna_correction.xml  doa_autocorrelate.block.yml  doa_autocorrelate.xml  doa_average_and_save.block.yml  doa_average_and_save.xml  doa_calibrate_lin_array.block.yml  doa_calibrate_lin_array.xml  doa_find_local_max.block.yml  doa_find_local_max.xml  doa_findmax_and_save.block.yml  doa_findmax_and_save.xml  doa_phase_correct_hier.block.yml  doa_phase_offset_est.block.yml  doa_power_detection.block.yml  doa_power_detection_cpp.block.yml  doa_qt_compass.xml  doa_rootMUSIC_linear_array.block.yml  doa_rootMUSIC_linear_array.xml  doa_save_antenna_calib.block.yml  doa_save_antenna_calib.xml  doa_serial_connection.block.yml  doa_signal_replay.block.yml  doa_signal_replay_cpp.block.yml  doa_twinrx_phase_offset_est.xml  doa_x440_usrp_source.block.yml  phase_correct_hier.xml  twinrx_usrp_source.xml
include/doa/: api.h  (+7 more)
lib/: CMakeLists.txt  MUSIC_lin_array_impl.cc  MUSIC_lin_array_impl.h  antenna_correction_impl.cc  antenna_correction_impl.h  autocorrelate_impl.cc  autocorrelate_impl.h  calibrate_lin_array_impl.cc  calibrate_lin_array_impl.h  find_local_max_impl.cc  find_local_max_impl.h  power_detection_cpp_impl.cc  power_detection_cpp_impl.h  rootMUSIC_linear_array_impl.cc  rootMUSIC_linear_array_impl.h  signal_replay_cpp_impl.cc  signal_replay_cpp_impl.h
microbit/: microbit_makecode_with_ID.hex  microbit_makecode_with_ID.py  servo_controller.py
predefined_signal/: 20MHz_5_4_oversampling_05msframe_45mssilent.npy
python/: CMakeLists.txt  __init__.py  average_and_save.py  compass.py  findmax_and_save.py  phase_correct_hier.py  qa_MUSIC_lin_array.py  qa_autocorrelate.py  qa_calibrate_lin_array.py  qa_find_local_max.py  qa_rootMUSIC_linear_array.py  save_antenna_calib.py  test001_findpeaks.m  test002_findpeaks.m  twinrx_phase_offset_est.py  twinrx_usrp_source.py
python/doa/bindings/: CMakeLists.txt  MUSIC_lin_array_pydoc.h  MUSIC_lin_array_python.cc  antenna_correction_pydoc.h  antenna_correction_python.cc  autocorrelate_python.cc  calibrate_lin_array_python.cc  find_local_max_python.cc  power_detection_cpp_python.cc  python_bindings.cc  rootMUSIC_linear_array_python.cc  signal_replay_cpp_pydoc.h  signal_replay_cpp_python.cc
python/doa/bindings/docstrings/: MUSIC_lin_array_pydoc_template.h  antenna_correction_pydoc_template.h  autocorrelate_pydoc_template.h  calibrate_lin_array_pydoc_template.h  find_local_max_pydoc_template.h  power_detection_cpp_pydoc_template.h  rootMUSIC_linear_array_pydoc_template.h  signal_replay_cpp_pydoc_template.h
swig/: CMakeLists.txt  doa_swig.i
(+66 files in other folders)
